--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/sebamed?useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/schedule?useSSL=true
 spring.datasource.username=seba
 spring.datasource.password=pass123!
