--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+# db prop
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/schedule?useSSL=true
 spring.datasource.username=seba
 spring.datasource.password=pass123!
+
+application.security.secret="pozdrav"
+application.security.expiration=180000
+
