--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/schedule?useSSL=true
 spring.datasource.username=seba
 spring.datasource.password=pass123!
 
-application.security.secret="pozdrav"
+application.security.secret=MudriSchoolOfMath
 application.security.expiration=180000
 
