--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,20 @@ spring.datasource.url=jdbc:mysql://localhost:3306/schedule?useSSL=true
 spring.datasource.username=seba
 spring.datasource.password=pass123!
 
+# security
 application.security.secret=MudriSchoolOfMath
 application.security.expiration=180000
+
+# mail service
+application.mail.from=spring.angular123@gmail.com
+# mail account details
+# mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=spring.angular123@gmail.com
+spring.mail.password=springANGULAR123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 
