--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/schedule?useSSL=true
-    username: seba
-    password: pass123!
+    username: root
+    password: mysqlroot
   jpa:
     hibernate:
       ddl-auto: update
